# Blokus-Engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  gui-bc4a6ce6495c6f6c_bg.wasm  gui-de7ae8ae9cc203eb.js  gui-de7ae8ae9cc203eb_bg.wasm  gui-ec35f355c182d74a.js  gui-ec35f355c182d74a_bg.wasm  gui-f9e4e452dad8c56b_bg.wasm  index.html  model.pt  pyproject.toml  requirements.txt  server_requirements.txt  style-a77ad56bf1fdaf73.css  train.sh
.github/workflows/: CI.yml
base_venv/: pyvenv.cfg
blokus/src/: game.rs  lib.rs
core/: Cargo.toml
core/src/: game.rs  lib.rs  main.rs
css/: style.css
gui/: Cargo.toml  README.md  build.rs  index.html
gui/css/: style.css
gui/src/: app.rs  board.rs  game_state.rs  main.rs  mod.rs  pieces.rs
model/: Dockerfile  model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  model_server.py  requirements.txt  resnet.py  testing.py  training.py
proto/: model.proto
proxy/: envoy.yaml
saved_models/: model_1.pt
self_play/: Cargo.toml  Dockerfile  build.rs
self_play/src/: lib.rs  main.rs  simulation.rs
src/: board.rs  game.rs  game_tree.rs  gui.rs  lib.rs  main.rs  node.rs  pieces.rs  player.rs  simulation.rs  state.rs  training.rs
src/client/: simulation.rs
src/gui/: app.rs  board.rs  pieces.rs
src/model/: model.proto  model.py  model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  model_server.py
wandb/: latest-run
wandb/run-20240813_150616-7de2pyw4/: run-7de2pyw4.wandb
wandb/run-20240813_150616-7de2pyw4/files/: config.yaml
wandb/run-20240813_150722-rblgor2r/: run-rblgor2r.wandb
wandb/run-20240813_150722-rblgor2r/files/: config.yaml  wandb-metadata.json
wandb/run-20240813_151714-pza4dazm/: run-pza4dazm.wandb
wandb/run-20240813_151714-pza4dazm/files/: config.yaml
wandb/run-20240813_152431-gj6i2bhr/: run-gj6i2bhr.wandb
wandb/run-20240813_152431-gj6i2bhr/files/: config.yaml
wandb/run-20240813_152458-o2g97nue/: run-o2g97nue.wandb
wandb/run-20240813_152458-o2g97nue/files/: config.yaml
wandb/run-20240813_152544-of3sbl2p/: run-of3sbl2p.wandb
wandb/run-20240813_152544-of3sbl2p/files/: config.yaml
wandb/run-20240813_152652-y5sssibd/: run-y5sssibd.wandb
wandb/run-20240813_152652-y5sssibd/files/: config.yaml
wandb/run-20240813_152708-or4ih1m5/: run-or4ih1m5.wandb
wandb/run-20240813_152708-or4ih1m5/files/: config.yaml
wandb/run-20240813_153201-8sfii4we/: run-8sfii4we.wandb
wandb/run-20240813_153201-8sfii4we/files/: config.yaml
wandb/run-20240813_153600-mevdf0js/: run-mevdf0js.wandb
wandb/run-20240813_153600-mevdf0js/files/: config.yaml
wandb/run-20240813_153701-f69pn77x/: run-f69pn77x.wandb
wandb/run-20240813_153701-f69pn77x/files/: config.yaml
wandb/run-20240813_153737-6c7ron7i/: run-6c7ron7i.wandb
wandb/run-20240813_153737-6c7ron7i/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
weights/: model_0.pt  model_1.pt
