[package]
name = "blokus_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
wasm-bindgen = "0.2.91"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlElement",
    "Element",
    "DomTokenList",
    "DataTransfer",
    "DragEvent",
    "Node",
    "Document",
    "Window",
    "CssStyleDeclaration",
    "KeyboardEvent",
]
