[package]
name = "blokus_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_distr = "0.4.3"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.91"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlElement",
    "Element",
    "DomTokenList",
    "DomStringMap",
    "DataTransfer",
    "DragEvent",
    "Node",
    "Document",
    "Window",
    "CssStyleDeclaration",
    "KeyboardEvent",
]

[build-dependencies]
tonic-build = "0.11"

