[package]
name = "gui"
version = "0.1.0"
authors = ["Alex Racapé"]
edition = "2021"

[dependencies]
blokus = { path = "../blokus" }
gloo-console = "0.3.0"
wasm-bindgen = "0.2.91"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlElement",
    "Element",
    "DomTokenList",
    "DomStringMap",
    "DataTransfer",
    "DragEvent",
    "Node",
    "Document",
    "Window",
    "CssStyleDeclaration",
    "KeyboardEvent",
]
