[package]
name = "gui"
version = "0.1.0"
authors = ["Alex Racapé"]
edition = "2021"

[dependencies]
blokus = { path = "../blokus" }
gloo-console = "0.3.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.42"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = "0.6.0"

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlElement",
    "Element",
    "DomTokenList",
    "DomStringMap",
    "DataTransfer",
    "DragEvent",
    "Node",
    "Document",
    "Window",
    "CssStyleDeclaration",
    "KeyboardEvent",
]

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }
