[package]
name = "gui"
version = "0.1.0"
authors = ["Alex Racapé"]
edition = "2021"

[dependencies]
blokus = { path = "../blokus" }
gloo-console = "0.3.0"
gloo-dialogs = "0.2.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.42"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwasm = "0.5.0"

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlElement",
    "Element",
    "DomTokenList",
    "DomStringMap",
    "DataTransfer",
    "DragEvent",
    "Node",
    "Document",
    "Window",
    "CssStyleDeclaration",
    "KeyboardEvent",
]
